--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.2",
     "soap": "^1.1.11",
     "styled-components": "^6.1.17",
     "xml2js": "^0.6.2",
